--- a/imagenes.htm
+++ b/imagenes.htm
@@ -44,11 +44,9 @@
       <!-- 1988-1992 -->
       <section class="galeria-grupo">
         <h2>1988 – 1992</h2>
-        <div class="subapartado"> <a href="file:///C:/Users/1akom/Desktop/web%20kom%20-%20copia/imagenes%201988-1992.html"
-            target="_top"> <img src="imagenes/1988-1992/00.jpg" alt="1988 - 1992">
-          </a><br>
-          <a href="file:///C:/Users/1akom/Desktop/web%20kom%20-%20copia/imagenes%201988-1992.html"
-            target="_top">1988 - 1992</a> </div>
+        <div class="subapartado"> <a href="imagenes%201988-1992.htm" target="_top">
+            <img src="imagenes/1988-1992/00.jpg" alt="1988 - 1992"> </a><br>
+          <a href="imagenes%201988-1992.htm" target="_top">1988 - 1992</a> </div>
       </section>
       <section class="galeria-grupo">
         <h2>2008 – 2022</h2>
