--- a/imagenes.htm
+++ b/imagenes.htm
@@ -34,7 +34,6 @@
         <li><a href="imagenes.htm" class="active">Imágenes</a></li>
         <li><a href="letras.htm">Audios</a></li>
         <li><a href="videos.htm">Vídeos</a></li>
-        <li><a href="prensa.htm">Prensa</a></li>
         <li><a target="_blank" href="https://facebook.com/1aKomunion">Facebook</a></li>
       </ul>
     </nav>
@@ -51,8 +50,7 @@
       <section class="galeria-grupo">
         <h2>2008 – 2022</h2>
         <div class="subapartado"> <a href="imagenes%20bestialc%202008.html" target="_top">
-            <img src="imagenes/13%20bestialc%202008/bestialc08_600.jpg" alt="13 bestialc">
-          </a><br>
+            <img src="imagenes/13%20bestialc%202008/00.jpg" alt="13 bestialc"> </a><br>
           <a href="imagenes%20bestialc%202008.html" target="_top">13º Bestialc
             (2008)</a> </div>
         <div class="subapartado"> <a href="imagenes%20legend%202010.html" target="_top">
