--- a/imagenes.htm
+++ b/imagenes.htm
@@ -42,13 +42,13 @@
       <h1>Galería de imágenes</h1>
       <!-- 1988-1992 -->
       <section class="galeria-grupo">
-        <h2>1988 – 1992</h2>
+        <h2><span style="color: #ac40f8;">1988 – 1992</span></h2>
         <div class="subapartado"> <a href="imagenes%201988-1992.htm" target="_top">
             <img src="imagenes/1988-1992/00.jpg" alt="1988 - 1992"> </a><br>
           <a href="imagenes%201988-1992.htm" target="_top">1988 - 1992</a> </div>
       </section>
       <section class="galeria-grupo">
-        <h2>2008 – 2022</h2>
+        <h2><span style="color: #ac40f8;">2008 – 2022</span></h2>
         <div class="subapartado"> <a href="imagenes%20bestialc%202008.html" target="_top">
             <img src="imagenes/13%20bestialc%202008/00.jpg" alt="13 bestialc"> </a><br>
           <a href="imagenes%20bestialc%202008.html" target="_top">13º Bestialc
