--- a/imagenes.htm
+++ b/imagenes.htm
@@ -54,8 +54,7 @@
           <a href="imagenes%20bestialc%202008.html" target="_top">13º Bestialc
             (2008)</a> </div>
         <div class="subapartado"> <a href="imagenes%20legend%202010.html" target="_top">
-            <img src="imagenes/legend%202010/legend%202010.jpg" alt="Pub D'Legend 2010">
-          </a><br>
+            <img src="imagenes/legend%202010/00.jpg" alt="Pub D'Legend 2010"> </a><br>
           <a href="imagenes%20legend%202010.html" target="_top">Pub D'Legend
             (2010)</a> </div>
         <div class="subapartado"> <a href="imagenes%20viverock.html" target="_top">
