--- a/imagenes legend 2010.html
+++ b/imagenes legend 2010.html
@@ -57,34 +57,30 @@
           target="_blank"> <img src="imagenes/legend%202010/02.JPG" alt="foto1">
         </a> <a href="imagenes/legend%202010/03.JPG" target="_blank"> <img src="imagenes/legend%202010/03.JPG"
 
-            alt="foto2"> </a>
-        <a href="imagenes/legend%202010/04.JPG" target="_blank"> <img src="imagenes/legend%202010/04.JPG"
+            alt="foto2"> </a> <a href="imagenes/legend%202010/04.JPG" target="_blank">
+          <img src="imagenes/legend%202010/04.JPG" alt="foto1"> </a> <a href="imagenes/legend%202010/05.JPG"
 
-            alt="foto1"> </a> <a href="imagenes/legend%202010/05.JPG" target="_blank">
-          <img src="imagenes/legend%202010/05.JPG" alt="foto2"> </a>
-        <a href="imagenes/legend%202010/06.JPG" target="_blank"> <img src="imagenes/legend%202010/06.JPG"
+          target="_blank"> <img src="imagenes/legend%202010/05.JPG" alt="foto2">
+        </a> <a href="imagenes/legend%202010/06.JPG" target="_blank"> <img src="imagenes/legend%202010/06.JPG"
 
-            alt="foto1"> </a> <a href="file:///C:/Users/1akom/Desktop/web%20kom%20-%20copia/imagenes/legend%202010/07.JPG"
+            alt="foto1"> </a> <a href="imagenes/legend%202010/07.JPG" target="_blank">
+          <img src="imagenes/legend%202010/07.JPG" alt="foto2"> </a> <a href="imagenes/legend%202010/08.JPG"
 
-          target="_blank"> <img src="imagenes/legend%202010/07.JPG" alt="foto2">
-        </a>
-        <a href="imagenes/legend%202010/08.JPG" target="_blank"> <img src="imagenes/legend%202010/08.JPG"
-
-            alt="foto1"> </a> <a href="imagenes/legend%202010/09.JPG" target="_blank">
-          <img src="imagenes/legend%202010/09.JPG" alt="foto2"> </a>
+          target="_blank"> <img src="imagenes/legend%202010/08.JPG" alt="foto1">
+        </a> 
         <a href="imagenes/legend%202010/10.JPG" target="_blank"> <img src="imagenes/legend%202010/10.JPG"
 
             alt="foto1"> </a> <a href="imagenes/legend%202010/11.JPG" target="_blank">
-          <img src="imagenes/legend%202010/11.JPG" alt="foto2"> </a>
-        <a href="imagenes/legend%202010/12.JPG" target="_blank"> <img src="imagenes/legend%202010/12.JPG"
+          <img src="imagenes/legend%202010/11.JPG" alt="foto2"> </a> <a href="imagenes/legend%202010/12.JPG"
 
-            alt="foto1"> </a> <a href="imagenes/legend%202010/13.JPG" target="_blank">
-          <img src="imagenes/legend%202010/13.JPG" alt="foto2"> </a>
-        <a href="imagenes/legend%202010/14.JPG" target="_blank"> <img src="imagenes/legend%202010/14.JPG"
+          target="_blank"> <img src="imagenes/legend%202010/12.JPG" alt="foto1">
+        </a> <a href="imagenes/legend%202010/13.JPG" target="_blank"> <img src="imagenes/legend%202010/13.JPG"
 
-            alt="foto1"> </a> <a href="imagenes/legend%202010/17.JPG" target="_blank">
-          <img src="imagenes/legend%202010/17.JPG" alt="foto2"> </a>
-        <a href="imagenes/legend%202010/18.JPG" target="_blank"> <img src="imagenes/legend%202010/18.JPG"
+            alt="foto2"> </a> <a href="imagenes/legend%202010/14.JPG" target="_blank">
+          <img src="imagenes/legend%202010/14.JPG" alt="foto1"> </a> <a href="imagenes/legend%202010/17.JPG"
+
+          target="_blank"> <img src="imagenes/legend%202010/17.JPG" alt="foto2">
+        </a> <a href="imagenes/legend%202010/18.JPG" target="_blank"> <img src="imagenes/legend%202010/18.JPG"
 
             alt="foto1"> </a> <a href="imagenes/legend%202010/19.JPG" target="_blank">
           <img src="imagenes/legend%202010/19.JPG" alt="foto2"> </a> <a href="imagenes/legend%202010/20.JPG"
@@ -92,54 +88,50 @@
           target="_blank"> <img src="imagenes/legend%202010/20.JPG" alt="foto1">
         </a> <a href="imagenes/legend%202010/21.JPG" target="_blank"> <img src="imagenes/legend%202010/21.JPG"
 
-            alt="foto2"> </a>
-        <a href="imagenes/legend%202010/22.JPG" target="_blank"> <img src="imagenes/legend%202010/22.JPG"
+            alt="foto2"> </a> <a href="imagenes/legend%202010/22.JPG" target="_blank">
+          <img src="imagenes/legend%202010/22.JPG" alt="foto1"> </a> <a href="imagenes/legend%202010/23.JPG"
 
-            alt="foto1"> </a> <a href="imagenes/legend%202010/23.JPG" target="_blank">
-          <img src="imagenes/legend%202010/23.JPG" alt="foto2"> </a>
-        <a href="imagenes/legend%202010/24.JPG" target="_blank"> <img src="imagenes/legend%202010/24.JPG"
+          target="_blank"> <img src="imagenes/legend%202010/23.JPG" alt="foto2">
+        </a> <a href="imagenes/legend%202010/24.JPG" target="_blank"> <img src="imagenes/legend%202010/24.JPG"
 
             alt="foto1"> </a> <a href="imagenes/legend%202010/25.JPG" target="_blank">
-          <img src="imagenes/legend%202010/25.JPG" alt="foto2"> </a>
-        <a href="imagenes/legend%202010/26.JPG" target="_blank"> <img src="imagenes/legend%202010/26.JPG"
+          <img src="imagenes/legend%202010/25.JPG" alt="foto2"> </a> <a href="imagenes/legend%202010/26.JPG"
 
-            alt="foto1"> </a> <a href="imagenes/legend%202010/27.JPG" target="_blank">
-          <img src="imagenes/legend%202010/27.JPG" alt="foto2"> </a>
-        <a href="imagenes/legend%202010/28.JPG" target="_blank"> <img src="imagenes/legend%202010/28.JPG"
+          target="_blank"> <img src="imagenes/legend%202010/26.JPG" alt="foto1">
+        </a> <a href="imagenes/legend%202010/27.JPG" target="_blank"> <img src="imagenes/legend%202010/27.JPG"
 
-            alt="foto1"> </a> <a href="imagenes/legend%202010/29.JPG" target="_blank">
-          <img src="imagenes/legend%202010/29.JPG" alt="foto2"> </a>
-        <a href="imagenes/legend%202010/30.JPG" target="_blank"> <img src="imagenes/legend%202010/30.JPG"
+            alt="foto2"> </a> <a href="imagenes/legend%202010/28.JPG" target="_blank">
+          <img src="imagenes/legend%202010/28.JPG" alt="foto1"> </a> <a href="imagenes/legend%202010/29.JPG"
+
+          target="_blank"> <img src="imagenes/legend%202010/29.JPG" alt="foto2">
+        </a> <a href="imagenes/legend%202010/30.JPG" target="_blank"> <img src="imagenes/legend%202010/30.JPG"
 
             alt="foto1"> </a> <a href="imagenes/legend%202010/31.JPG" target="_blank">
-          <img src="imagenes/legend%202010/31.JPG" alt="foto2"> </a>
-        <a href="imagenes/legend%202010/32.JPG" target="_blank"> <img src="imagenes/legend%202010/32.JPG"
+          <img src="imagenes/legend%202010/31.JPG" alt="foto2"> </a> <a href="imagenes/legend%202010/32.JPG"
 
-            alt="foto1"> </a> <a href="imagenes/legend%202010/33.JPG" target="_blank">
-          <img src="imagenes/legend%202010/33.JPG" alt="foto2"> </a>
-        <a href="imagenes/legend%202010/34.JPG" target="_blank"> <img src="imagenes/legend%202010/34.JPG"
+          target="_blank"> <img src="imagenes/legend%202010/32.JPG" alt="foto1">
+        </a> <a href="imagenes/legend%202010/33.JPG" target="_blank"> <img src="imagenes/legend%202010/33.JPG"
 
-            alt="foto1"> </a> <a href="imagenes/legend%202010/35.JPG" target="_blank">
-          <img src="imagenes/legend%202010/35.JPG" alt="foto2"> </a> <a href="imagenes/legend%202010/36.JPG"
+            alt="foto2"> </a> <a href="imagenes/legend%202010/34.JPG" target="_blank">
+          <img src="imagenes/legend%202010/34.JPG" alt="foto1"> </a> <a href="imagenes/legend%202010/35.JPG"
 
-          target="_blank"> <img src="imagenes/legend%202010/36.JPG" alt="foto1">
-        </a> <a href="imagenes/legend%202010/37.JPG" target="_blank"> <img src="imagenes/legend%202010/37.JPG"
+          target="_blank"> <img src="imagenes/legend%202010/35.JPG" alt="foto2">
+        </a> <a href="imagenes/legend%202010/36.JPG" target="_blank"> <img src="imagenes/legend%202010/36.JPG"
 
-            alt="foto2"> </a>
-        <a href="imagenes/legend%202010/38.JPG" target="_blank"> <img src="imagenes/legend%202010/38.JPG"
+            alt="foto1"> </a> <a href="imagenes/legend%202010/37.JPG" target="_blank">
+          <img src="imagenes/legend%202010/37.JPG" alt="foto2"> </a> <a href="imagenes/legend%202010/38.JPG"
 
-            alt="foto1"> </a> <a href="imagenes/legend%202010/39.JPG" target="_blank">
-          <img src="imagenes/legend%202010/39.JPG" alt="foto2"> </a>
-        <a href="imagenes/legend%202010/40.JPG" target="_blank"> <img src="imagenes/legend%202010/40.JPG"
+          target="_blank"> <img src="imagenes/legend%202010/38.JPG" alt="foto1">
+        </a> <a href="imagenes/legend%202010/39.JPG" target="_blank"> <img src="imagenes/legend%202010/39.JPG"
 
-            alt="foto1"> </a> <a href="imagenes/legend%202010/41.JPG" target="_blank">
-          <img src="imagenes/legend%202010/41.JPG" alt="foto2"> </a>
-        <a href="imagenes/legend%202010/42.JPG" target="_blank"> <img src="imagenes/legend%202010/42.JPG"
+            alt="foto2"> </a> <a href="imagenes/legend%202010/40.JPG" target="_blank">
+          <img src="imagenes/legend%202010/40.JPG" alt="foto1"> </a> <a href="imagenes/legend%202010/41.JPG"
+
+          target="_blank"> <img src="imagenes/legend%202010/41.JPG" alt="foto2">
+        </a> <a href="imagenes/legend%202010/42.JPG" target="_blank"> <img src="imagenes/legend%202010/42.JPG"
 
             alt="foto1"> </a> <a href="imagenes/legend%202010/43.JPG" target="_blank">
-          <img src="imagenes/legend%202010/43.JPG" alt="foto2"> </a>
-       
-      </section>
+          <img src="imagenes/legend%202010/43.JPG" alt="foto2"> </a> </section>
       <!-- Volver abajo -->
       <p><a href="imagenes.htm" class="volver">← Volver atrás</a></p>
     </main>
