--- a/imagenes.htm
+++ b/imagenes.htm
@@ -58,8 +58,8 @@
           <a href="imagenes%20legend%202010.html" target="_top">Pub D'Legend
             (2010)</a> </div>
         <div class="subapartado"> <a href="imagenes%20viverock.html" target="_top">
-            <img src="imagenes/II%20vive%20rock%202011/VIVEROCK_FEST_2011_low.jpg"
-              alt="II Vive Rock"> </a><br>
+            <img src="imagenes/II%20vive%20rock%202011/00.jpg" alt="II Vive Rock">
+          </a><br>
           <a href="imagenes%20viverock.html" target="_top">II Vive Rock (2011)</a>
         </div>
         <div class="subapartado"> <a href="imagenes%20opal.html" target="_top">
