--- a/inicio.htm
+++ b/inicio.htm
@@ -19,11 +19,30 @@
             align-items: center;
             padding-top: 3vh;
         }
+      
+        /* Sección memoria */
+        .memoria {
+            margin-top: 3rem;
+        }
+        .foto-memoria {
+            width: 180px;
+            height: 180px;
+            object-fit: cover;
+            border-radius: 50%;
+            border: 3px solid #ff0000;
+        }
+        .texto-memoria {
+            margin-top: 1rem;
+            font-size: 1.1rem;
+            line-height: 1.4;
+        }
+      
     </style>
   </head>
   <body>
-    <header class="cabecera"> <a href="index.htm" class="logo"> <img src="imagenes/texto%20logo1.gif"
-          alt="1ª KOMUNION"> </a> </header>
+    <header class="cabecera"> <a href="index.htm" class="logo"><img src="imagenes/texto%20logo1.gif"
+
+          alt="1ª KOMUNION"></a> </header>
     <nav class="nav-principal">
       <ul>
         <li><a href="inicio.htm" class="active">Inicio</a></li>
@@ -32,10 +51,27 @@
         <li><a href="imagenes.htm">Imágenes</a></li>
         <li><a href="letras.htm">Audios</a></li>
         <li><a href="videos.htm">Vídeos</a></li>
-        <li><a href="prensa.htm">Prensa</a></li>
         <li><a target="_blank" href="https://facebook.com/1aKomunion">Facebook</a></li>
       </ul>
     </nav>
-    <main class="contenido"><!-- vacío --></main>
+    <div style="text-align: center;">
+      <main class="contenido"><span style="color: yellow;"><br>
+          <br>
+          <br>
+          <br>
+          <br>
+          <br>
+          <br>
+          <br>
+        </span>
+        <section class="memoria"> <img src="imagenes/Bicidep.jpg" alt="Antonio &quot;Bici&quot; Díaz"
+
+            class="foto-memoria">
+          <p class="texto-memoria"> <span style="color: yellow;">En memoria de<br>
+              Antonio "Bici" Díaz.<br>
+              D.E.P. </span></p>
+        </section>
+      </main>
+    </div>
   </body>
 </html>
